@@ -1,0 +1,11 @@
+; $Id: en-GB.plg_editors-xtd_article.ini 14276 2010-01-18 14:20:28Z louis $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+PLG_ARTICLE_XML_DESCRIPTION="Displays a button to make it possible to insert articles' links into an Article. Displays a popup allowing you to choose the article"
+PLG_ARTICLE_BUTTON_ARTICLE="Article"
+
+
+
