@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-DESCIMAGE="Displays a button to make it possible to insert images into an Article. Displays a popup allowing you to configure an image's properties and upload new image files."
-
+PLG_IMAGE_XML_DESCRIPTION="Displays a button to make it possible to insert images into an Article. Displays a popup allowing you to configure an image's properties and upload new image files."
+PLG_IMAGE_BUTTON_IMAGE="Image"
 
 
