@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-DESCPAGEBREAK="Provides a button to enable a <em>pagebreak</em> to be inserted into an Article. A popup allows you to configure the settings to be used."
-
+PLG_EDITORSXTD_PAGEBREAK_XML_DESCRIPTION="Provides a button to enable a <em>pagebreak</em> to be inserted into an Article. A popup allows you to configure the settings to be used."
+PLG_EDITORSXTD_PAGEBREAK_BUTTON_PAGEBREAK="Pagebreak"
 
