@@ -4,7 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-DESCREADMORE="Enables a button which allows you to easily insert the <em>Read more...</em> link into an Article."
-
-
-
+PLG_READMORE_XML_DESCRIPTION="Enables a button which allows you to easily insert the <em>Read more...</em> link into an Article."
+PLG_READMORE_BUTTON_READMORE="Read More"
+PLG_READMORE_ALREADY_EXISTS="There is already a Read more... link that has been inserted. Only one such link is permitted. Use {pagebreak} to split the page up further."
