@@ -138,4 +138,5 @@ PLG_TINY_FIELD_WORDCOUNT_DESC="Turn on/off Wordcount"
 PLG_TINY_FIELD_WORDCOUNT_LABEL="Wordcount"
 PLG_TINY_FIELD_XHTMLXTRAS_DESC="Show/Hide the additional XHTML features. Only works in advanced mode."
 PLG_TINY_FIELD_XHTMLXTRAS_LABEL="XHTMLxtras"
+PLG_TINY_BUTTON_TOGGLE_EDITOR="Toggle editor"
 PLG_TINY_XML_DESCRIPTION="TinyMCE is a platform-independent Web-based JavaScript HTML WYSIWYG Editor control."
