@@ -60,7 +60,7 @@ class plgButtonArticle extends JPlugin
 		$button = new JObject();
 		$button->set('modal', true);
 		$button->set('link', $link);
-		$button->set('text', JText::_('Article'));
+		$button->set('text', JText::_('PLG_ARTICLE_BUTTON_ARTICLE'));
 		$button->set('name', 'article');
 		$button->set('options', "{handler: 'iframe', size: {x: 770, y: 400}}");
 
