@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.0.0</version>
-	<description>DESCIMAGE</description>
+	<description>PLG_IMAGE_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="image">image.php</filename>
