@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+03-Feb-2010 Jean-Marie Simonet
+^ Refactored editors-xtd plugins ini keys.
+
 03-Feb-2010 Hannes Papenberg
 # Fixed bug in JTable::reset() that don't properly reset the values - Thanks Jonnathan!
 ^ Changed JTable::__construct() to create the properties with their default values from the table - Thanks Jonnathan!
